regression fixes